# PSO2TestPlugin

./: .gitignore  BuildDetours.bat  CMakeLists.txt  InterfaceManager.cpp  InterfaceManager.h  PSO2TestPlugin.cpp  PSO2TestPlugin.h  README.md  Web.cpp  Web.h  patch-memsig.bat
.github/workflows/: cmake.yml
cmake/: EmbedResources.cmake
imgui_impl/: imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_win32.cpp  imgui_impl_win32.h
scripts/: BuildDetours.bat
src/: InterfaceManager.cpp  PSO2TestPlugin.cpp  PSO2TestPlugin.h  Util.cpp  Util.h
